# src/main/java/com/officialpapers/api/model/DocumentInstructionListResponse.java
@@ -1,6 +1,0 @@
-package com.officialpapers.api.model;
-
-import java.util.List;
-
-public record DocumentInstructionListResponse(List<DocumentInstruction> items) {
-}
